re PR c++/51854 (ICE in mangle.c with literal of complex floating type)

PR c++/51854
	* mangle.c (write_template_arg_literal): Handle complex.

From-SVN: r183222